# airavata-portals

./: pyrightconfig.json
airavata-custos-portal/: package.json  requirements.txt
airavata-django-portal/: .cursorrules  .gitignore  README.md  build_js.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
airavata-django-portal-sdk/: requirements.txt  setup.py
airavata-django-portal/airavata_django_portal_commons/dynamic_apps/: __init__.py  context_processors.py  urls.py
airavata-django-portal/airavata_django_portal_sdk/: queue_settings_calculators.py  views.py
airavata-django-portal/airavata_django_portal_sdk/experiment_util/: api.py  intermediate_output.py
airavata-django-portal/airavata_django_portal_sdk/tests/: test_user_storage.py
airavata-django-portal/airavata_django_portal_sdk/user_storage/: __init__.py  api.py
airavata-django-portal/airavata_django_portal_sdk/user_storage/backends/: CredCommon_pb2.py  MFTApi_pb2.py  MFTApi_pb2_grpc.py  django_filesystem_provider.py  mft_provider.py
airavata-django-portal/compose/: docker-compose.yaml
airavata-django-portal/compose/dbinit/: 01-init-db.sql
airavata-django-portal/django_airavata/: __init__.py  context_processors.py  middleware.py  settings.py  stubs.py  uploadhandler.py  urls.py  utils.py
airavata-django-portal/django_airavata/apps/admin/: apps.py  package.json  vue.config.js
airavata-django-portal/django_airavata/apps/admin/management/commands/: archive_user_data.py
airavata-django-portal/django_airavata/apps/admin/migrations/: 0001_initial.py
airavata-django-portal/django_airavata/apps/api/: exceptions.py  helpers.py  output_views.py  serializers.py  signals.py  thrift_utils.py  urls.py  view_utils.py  views.py
airavata-django-portal/django_airavata/apps/api/migrations/: 0001_initial.py  0001_squashed_0004_auto_20190625_1938.py  0002_auto_20190513_2037.py  0002_auto_20190711_1438.py  0003_auto_20190625_1926.py  0003_auto_20190716_1549.py  0004_auto_20190625_1938.py  0004_auto_20191112_2134.py  0005_delete_user_files.py  0006_applicationtemplate_applicationtemplatecontextprocessor.py
airavata-django-portal/django_airavata/apps/api/tests/: test_views.py
airavata-django-portal/django_airavata/apps/auth/: backends.py  models.py  package.json  serializers.py  signals.py  utils.py  views.py  vue.config.js
airavata-django-portal/django_airavata/apps/auth/migrations/: 0001_initial.py  0002_emailtemplate.py  0003_default_email_templates.py  0004_password_reset_request.py  0005_auto_20191211_2011.py  0006_emailverification_next.py  0007_auto_20200917_1610.py  0009_auto_20210625_1725.py  0014_extendeduserprofileagreementfield_extendeduserprofilefield_extendeduserprofilefieldlink_extendeduser.py  0015_auto_20220329_1708.py  0019_auto_20221118_1323.py
airavata-django-portal/django_airavata/apps/auth/tests/: test_middleware.py
airavata-django-portal/django_airavata/apps/dataparsers/: apps.py  package.json  vue.config.js
airavata-django-portal/django_airavata/apps/groups/: apps.py  package.json  vue.config.js
airavata-django-portal/django_airavata/apps/workspace/: apps.py  package.json  views.py  vue.config.js
airavata-django-portal/django_airavata/apps/workspace/migrations/: 0001_initial.py  0002_delete_user_files.py
airavata-django-portal/django_airavata/static/common/: package.json  vue.config.js
airavata-django-portal/django_airavata/templates/: base.html  wagtail_base.html
airavata-django-portal/django_airavata/templates/includes/: head.html
airavata-django-portal/django_airavata/wagtailapps/base/: blocks.py  models.py  wagtail_hooks.py
airavata-django-portal/django_airavata/wagtailapps/base/fixtures/: new_default_theme.json
airavata-django-portal/django_airavata/wagtailapps/base/management/commands/: fix_page_revision_content_type.py  set_wagtail_site.py
airavata-django-portal/django_airavata/wagtailapps/base/migrations/: 0001_initial.py  0002_auto_20180410_2236.py  0003_navextra_nav_logo_link.py  0004_auto_20180414_1852.py  0005_cybergatewayhomepage_rowcybergatewayhomepagerelation.py  0006_auto_20180415_0040.py  0007_auto_20180415_0045.py  0008_cybergatewayhomepage_contact.py  0009_auto_20180415_0141.py  0010_auto_20180415_0142.py  0011_auto_20180415_0143.py  0012_auto_20180415_0149.py  0013_auto_20180417_2034.py  0014_homepage_show_footer.py  0015_cybergatewayhomepage_show_announcements.py  0016_auto_20180427_1755.py  0017_gatewayicon_gatewaytitle.py  0018_auto_20181010_0136.py  0019_auto_20181025_1522.py  0020_auto_20190417_1949.py  0021_auto_20191105_2053.py  0022_auto_20191106_1542.py  0023_rowblankpagerelation_container.py  0024_auto_20200624_1925.py  0025_auto_20210319_2247.py  0026_auto_20210923_2212.py
airavata-django-portal/django_airavata/wagtailapps/base/templatetags/: navigation_tags.py
airavata-local-agent/: package-lock.json  package.json
airavata-mcp-client-chatbot/: README.md
airavata-mcp-client-chatbot/backend/: .gitignore  app.py  requirements.txt
airavata-mcp-client-chatbot/backend/mcp_client/: client_side_ollama_prompting.py  cybershuttle_mcp_client.py  mcp_config.json  open_ai_mcp_client.py
airavata-mcp-client-chatbot/widget/: package-lock.json  package.json
airavata-mcp-client-chatbot/widget/src/: App.tsx
airavata-mcp-client-chatbot/widget/src/components/: Chatbox.css  Chatbox.tsx  Chatbox2.css  FormattedMessage.tsx  Results.css  Results.tsx  Results2.css
airavata-mft-portal/: requirements.txt
airavata-php-gateway/app/libraries/: EmailUtilities.php
airavata-php-gateway/routes/: web.php
airavata-research-portal/: .env.example  package-lock.json  package.json
airavata-research-portal/src/: App.tsx
airavata-research-portal/src/components/add/: AddGitUrl.tsx  ConfirmRepoDetails.tsx  DatasetSearch.tsx  RepoSearch.tsx
airavata-research-portal/src/interfaces/: PrivacyEnum.ts  ResourceAuthor.ts  ResourceType.ts  ResourceVerificationActivity.ts
airavata-research-portal/src/layouts/: NavBar.tsx
airavata-research-portal/src/lib/: api.ts  controller.ts  util.ts
(+19 files in other folders)
