[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-django-portal"
version = "0.1"
description = "The Airavata Django Portal is a web interface to the Apache Airavata API implemented using the Django web framework."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "Apache License 2.0"}
authors = [
  {name = "Apache Software Foundation", email = "dev@airavata.apache.org"}
]
urls = {"Homepage" = "https://github.com/apache/airavata-django-portal"}

# Main dependencies
dependencies = [
    "Django < 5",
    "djangorestframework",
    "requests",
    "requests-oauthlib",
    "thrift",
    "thrift_connector",
    "wagtail",
    "wagtailfontawesome",
    "jupyter",
    "papermill",
    "airavata-django-portal-sdk"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "flake8-isort"
]
mysql = [
    "mysqlclient"
] 

[tool.flake8]
exclude = [
    "venv",
    "./airavata",
    "node_modules",
    "settings_local.py",
    "*/migrations",
    ".tox"
]
ignore = ["E501", "W504"]

[tool.isort]
multi_line_output = 3
skip = ["migrations", ".git"]
skip_gitignore = true
known_third_party = ["airavata", "airavata_django_portal_sdk"]

[tool.tox]
# Tox does not natively read from pyproject.toml, but this is for documentation/reference
envlist = ["py36", "py37", "py38", "py39", "py310"] 