[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-django-portal"
version = "1.0.0"
description = "The Airavata Django Portal is a web interface to the Apache Airavata API implemented using the Django web framework."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache License 2.0"}
authors = [
  {name = "Apache Software Foundation", email = "dev@airavata.apache.org"}
]
urls = {"Homepage" = "https://github.com/apache/airavata-django-portal"}

# Main dependencies
dependencies = [
    "Django < 5",
    "djangorestframework",
    "requests",
    "requests-oauthlib",
    "thrift",
    "thrift_connector",
    "wagtail",
    "wagtailfontawesome",
    "jupyter",
    "papermill",
    "airavata-python-sdk < 3"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "Markdown",
    "mkdocs",
    "mkautodoc",
    "pycodestyle",
    "Jinja2",
    "pytest",
    "pytest-django",
    "tox"
]
mysql = [
    "mysqlclient"
] 

[tool.flake8]
exclude = [
    "venv",
    "./airavata",
    "node_modules",
    "settings_local.py",
    "*/migrations",
    ".tox"
]
ignore = ["E501", "W504"]

[tool.isort]
multi_line_output = 3
skip = ["migrations", ".git"]
skip_gitignore = true
known_third_party = ["airavata", "airavata_django_portal_sdk"]

[tool.setuptools.packages.find]
where = ["airavata_django_portal_commons", "airavata_django_portal_sdk", "django_airavata"] 

[tool.ruff]
line-length = 120

[tool.ruff.lint]
exclude = [
    "venv",
    "./airavata",
    "node_modules",
    "settings_local.py",
    "*/migrations",
    ".tox"
]
ignore = ["E501"]
extend-select = ["I"]  # isort rules

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto" 