[build-system]
requires      = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airavata-django-portal"
version = "1.0.0"
description = "The Airavata Django Portal is a web interface to the Apache Airavata API implemented using the Django web framework."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache License 2.0" }
authors = [
  { name = "Apache Software Foundation", email = "dev@airavata.apache.org" },
]
urls = { "Homepage" = "https://github.com/apache/airavata-portals/tree/main/airavata-django-portal" }

# Main dependencies
dependencies = [
  "airavata-python-sdk>=2.0.0,<3.0",
  "Django>=4.2,<5.0",
  "djangorestframework",
  "requests",
  "requests-oauthlib",
  "thrift",
  "thrift_connector",
  "wagtail",
  "wagtailfontawesome",
  "jupyter",
  "papermill",
  "django-webpack-loader",
  "mysqlclient",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.1.0",
  "Markdown>=3.5.0",
  "mkdocs>=1.5.0",
  "mkautodoc>=0.1.0",
  "pycodestyle>=2.11.0",
  "Jinja2>=3.1.0",
  "pytest>=7.4.0",
  "pytest-django>=4.5.0",
  "tox>=4.6.0",
]

[tool.isort]
multi_line_output = 3
skip_gitignore    = true

[tool.setuptools.packages.find]
where = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["I", "UP", "N", "W", "C90"]

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"
line-ending  = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
